--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "tavrin/sirius",
   "type": "library",
   "description": "Sirius Core",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "license": "MIT",
   "authors": [
     {
