--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "tavrin/sirius",
   "type": "library",
-  "description": "Sirius Core",
+  "description": "Sirius Sirius",
   "minimum-stability": "dev",
   "license": "MIT",
   "authors": [
