--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-json": "*",
     "phpmailer/phpmailer": "^6.3",
     "ramsey/uuid": "^4.1",
-    "ext-fileinfo": "*"
+    "ext-fileinfo": "*",
+    "composer/composer": "2.1.x-dev"
   },
   "require-dev": {
     "phpunit/phpunit": "9",
