--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
     "symfony/var-dumper": "^5.2",
     "php-parallel-lint/php-parallel-lint": "^1.2"
   },
+  "bin": [
+    "sirius"
+  ],
   "autoload": {
     "psr-4": {
       "Sirius\\": ""
