--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "phpmailer/phpmailer": "^6.3",
     "ramsey/uuid": "^4.1",
     "ext-fileinfo": "*",
-    "composer/composer": "2.1.x-dev"
+    "composer/composer": "2.1.x-dev",
+    "ext-dom": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "9",
